--- a/config/content.htm
+++ b/config/content.htm
@@ -291,11 +291,14 @@ end</pre>
 <p><img alt="" class="add_border" height="282" src="/images/meArm_linkage_dimension.png" width="600"/></p>
 <p>(From: <a href="/downloads/2016_ADDITIVE MANUFACTURING PROCESSES FOR FABRICATING A MINI ROBOT - COMPUTATIONAL MODELS AND EXPERIMENTAL RESULTS.pdf">2016_ADDITIVE MANUFACTURING PROCESSES FOR FABRICATING A MINI ROBOT - COMPUTATIONAL MODELS AND EXPERIMENTAL RESULTS.pdf</a>)</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/2pFReCfDZsU" title="YouTube video player" width="560"></iframe></p>
-<h2>CAD1 繪圖</h2>
-<p>CAD1 指各學員所分配到的第一套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
-<p>CAD1 緣起說明與介紹</p>
-<p>請不要直接從找到的 CAD1 套件說明複製貼上, 而是應該要看完各種參考資料後, 重新打字彙整.</p>
-<h3>CAD1 安裝配置</h3>
+<h2>Onshape 繪圖</h2>
+<p>Onshape緣起說明與介紹</p>
+<p>Onshape是一種Full Cloud的網路CAD設計平台，可以在maker開發完自己的想法時使用，但是如果想導入企業中，可能需要點時間，尤其老牌或比較大的企業可能需要的時間更久，因Onshape的優點，在反面來看也是它的缺點。雖然鼓勵開放想法可以利用群眾的力量達到更好的想法與作品，供大家使用，但憑良心講，這很困難。</p>
+<p>機構跟產品設計的圖面其實看到只是一個簡單的3D圖面，並沒有多困難，但後面可能花費數十年，以及很多的金錢與心力才完成，不清楚的人可能看不懂，知道的人一眼就能看出重點，這對大部份企業來說會很傷。所以他們會希望這重要的“資產”放在自己可以控管的”地方“，而不是”雲“或”網路上“，這需要時間去改變。</p>
+<p>但Onshape可以使有這專長的人分享他解決問題的專長，而保留他的重點知識，這有點八股，但有時”重點知識“不是我們的，而我們只是正好知道的人。</p>
+<p>現在各國在進行知識、教育或基礎建設的未來發展上，目前大多在於軟體方面，但有一件事實是，軟體發展雖有無限的可能性，但會受限於硬體與機構的發展，像Google推出SketchUp雖不能滿足大部份的需求，但你看Google地圖上的立體建築物有多少，就可發現它的成果。即使Google地圖上面的3D跟實物不是很精準，但用途其實比我們想像中的大。</p>
+<p>所以如果在程式設計外，再加上Onshape的部份圖說與製作的教育跟推廣，我們可以想像有更多人將提升解決自身或產業需求的能力，而不用像現在始終受限在工業化生產的框框裏。</p>
+<p><img alt="" height="214" src="/images/onshape-analytics-and-reporting.jpg" width="344"/><img alt="" height="218" src="/images/onshape-cad.jpg" width="350"/><img alt="" height="215" src="/images/onshape-collaboration-tools.jpg" width="346"/><img alt="" height="219" src="/images/onshape-data-management.png" width="351"/><img alt="" height="244" src="/images/onshape-integrations-and-partners.jpg" width="396"/><img alt="" height="242" src="/images/onshape-security-and-audit-controls.jpg" width="390"/></p><h3>CAD1 安裝配置</h3>
 <p>CAD1 指各學員所分配到的第一套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
 <p>CAD1 套件下載安裝與配置</p>
 <p>CAD1 下載安裝與配置流程 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 下載安裝與配置</span>」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.</span></p>
