--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -7,8 +7,209 @@
 <p>其他與作者或作業相關資料說明或介紹</p>
 <h1>Task</h1>
 <h2>hwpage</h2>
-<p><span>網站連結:</span><a href="https://40923245-1.github.io/cad2021_hw/">https://40923245-1.github.io/cad2021_hw/</a></p>
-<h1>HW1</h1>
+<table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; width: 48pt;" width="64">
+<tbody>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40723126.github.io/cad2021_hw/content/index.html" target="_parent">40723126</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40723135.github.io/cad2021_hw/content/index.html" target="_parent">40723135</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40723217.github.io/cad2021_hw/content/index.html" target="_parent">40723217</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40732331.github.io/cad2021_hw/content/index.html" target="_parent">40732331</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40823114.github.io/cad2021_hw/content/index.html" target="_parent">40823114</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40823115.github.io/cad2021_hw/content/index.html" target="_parent">40823115</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://pyc40823117.github.io/cad2021_hw/content/index.html" target="_parent">40823117</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40823119.github.io/cad2021_hw/content/index.html" target="_parent">40823119</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40823122.github.io/cad2021_hw/content/index.html" target="_parent">40823122</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40823127.github.io/cad2021_hw/content/index.html" target="_parent">40823127</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40823146.github.io/cad2021_hw/content/index.html" target="_parent">40823146</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40823148.github.io/cad2021_hw/content/index.html" target="_parent">40823148</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40823215.github.io/cad2021_hw/content/index.html" target="_parent">40823215</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40871106.github.io/cad2021_hw/content/index.html" target="_parent">40871106</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923201.github.io/cad2021_hw/content/index.html" target="_parent">40923201</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://youshin40923203.github.io/cad2021_hw/content/index.html" target="_parent">40923203</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923204.github.io/cad2021_hw/content/index.html" target="_parent">40923204</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923205.github.io/cad2021_hw/content/index.html" target="_parent">40923205</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923206-1.github.io/cad2021_hw/content/index.html" target="_parent">40923206</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923207.github.io/cad2021_hw/content/index.html" target="_parent">40923207</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://nfu40923208.github.io/cad2021_hw/content/index.html" target="_parent">40923208</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://nfu40923209.github.io/cad2021_hw/content/index.html" target="_parent">40923209</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923210.github.io/cad2021_hw/content/index.html" target="_parent">40923210</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://a40923211.github.io/cad2021_hw/content/index.html" target="_parent">40923211</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923212.github.io/cad2021_hw/content/index.html" target="_parent">40923212</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923213.github.io/cad2021_hw/content/index.html" target="_parent">40923213</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923214.github.io/cad2021_hw/content/index.html" target="_parent">40923214</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923216.github.io/cad2021_hw/content/index.html" target="_parent">40923216</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923217.github.io/cad2021_hw/content/index.html" target="_parent">40923217</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923218.github.io/cad2021_hw/content/index.html" target="_parent">40923218</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://nfu40923219.github.io/cad2021_hw/content/index.html" target="_parent">40923219</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923220.github.io/cad2021_hw/content/index.html" target="_parent">40923220</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923221.github.io/cad2021_hw/content/index.html" target="_parent">40923221</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923223.github.io/cad2021_hw/content/index.html" target="_parent">40923223</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://s40923224.github.io/cad2021_hw/content/index.html" target="_parent">40923224</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923225.github.io/cad2021_hw/content/index.html" target="_parent">40923225</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923226.github.io/cad2021_hw/content/index.html" target="_parent">40923226</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923227.github.io/cad2021_hw/content/index.html" target="_parent">40923227</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923228.github.io/cad2021_hw/content/index.html" target="_parent">40923228</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923229.github.io/cad2021_hw/content/index.html" target="_parent">40923229</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923230.github.io/cad2021_hw/content/index.html" target="_parent">40923230</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923231.github.io/cad2021_hw/content/index.html" target="_parent">40923231</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923232.github.io/cad2021_hw/content/index.html" target="_parent">40923232</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923233.github.io/cad2021_hw/content/index.html" target="_parent">40923233</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923234.github.io/cad2021_hw/content/index.html" target="_parent">40923234</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923235.github.io/cad2021_hw/content/index.html" target="_parent">40923235</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923236.github.io/cad2021_hw/content/index.html" target="_parent">40923236</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923237.github.io/cad2021_hw/content/index.html" target="_parent">40923237</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923238.github.io/cad2021_hw/content/index.html" target="_parent">40923238</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923239.github.io/cad2021_hw/content/index.html" target="_parent">40923239</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923240.github.io/cad2021_hw/content/index.html" target="_parent">40923240</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923241.github.io/cad2021_hw/content/index.html" target="_parent">40923241</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923242.github.io/cad2021_hw/content/index.html" target="_parent">40923242</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923243.github.io/cad2021_hw/content/index.html" target="_parent">40923243</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923244.github.io/cad2021_hw/content/index.html" target="_parent">40923244</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923245-1.github.io/cad2021_hw/content/index.html" target="_parent">40923245</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923246.github.io/cad2021_hw/content/index.html" target="_parent">40923246</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923247.github.io/cad2021_hw/content/index.html" target="_parent">40923247</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923248.github.io/cad2021_hw/content/index.html" target="_parent">40923248</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923249-1.github.io/cad2021_hw/content/index.html" target="_parent">40923249</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923250.github.io/cad2021_hw/content/index.html" target="_parent">40923250</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923251.github.io/cad2021_hw/content/index.html" target="_parent">40923251</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923252.github.io/cad2021_hw/content/index.html" target="_parent">40923252</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40923253.github.io/cad2021_hw/content/index.html" target="_parent">40923253</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40971220.github.io/cad2021_hw/content/index.html" target="_parent">40971220</a></td>
+</tr>
+<tr height="26" style="height: 19.2pt;">
+<td align="right" class="xl64" height="26" style="height: 19.2pt;"><a href="https://40971227.github.io/cad2021_hw/content/index.html" target="_parent">40971227</a></td>
+</tr>
+</tbody>
+</table>
+<p>HW1</p>
 <p>HW1 佔學期成績 25%</p>
 <p><span style="background-color: #ffff99;">HW1 必須在 2021.11.10 22:00 之前完成.<br/></span></p>
 <p><a href="https://github.com/mdecourse/cad2021/discussions/5">HW1 具體項目成果回報區</a>將於 2021.09.23 開啟, 於 <span style="background-color: #ff99cc;">2021.11.10 22:00 關閉.</span></p>
@@ -90,11 +291,14 @@ end</pre>
 <p><img alt="" class="add_border" height="282" src="/images/meArm_linkage_dimension.png" width="600"/></p>
 <p>(From: <a href="/downloads/2016_ADDITIVE MANUFACTURING PROCESSES FOR FABRICATING A MINI ROBOT - COMPUTATIONAL MODELS AND EXPERIMENTAL RESULTS.pdf">2016_ADDITIVE MANUFACTURING PROCESSES FOR FABRICATING A MINI ROBOT - COMPUTATIONAL MODELS AND EXPERIMENTAL RESULTS.pdf</a>)</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/2pFReCfDZsU" title="YouTube video player" width="560"></iframe></p>
-<h2>CAD1 繪圖</h2>
-<p>CAD1 指各學員所分配到的第一套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
-<p>CAD1 緣起說明與介紹</p>
-<p>請不要直接從找到的 CAD1 套件說明複製貼上, 而是應該要看完各種參考資料後, 重新打字彙整.</p>
-<h3>CAD1 安裝配置</h3>
+<h2>Onshape 繪圖</h2>
+<p>Onshape緣起說明與介紹</p>
+<p>Onshape是一種Full Cloud的網路CAD設計平台，可以在maker開發完自己的想法時使用，但是如果想導入企業中，可能需要點時間，尤其老牌或比較大的企業可能需要的時間更久，因Onshape的優點，在反面來看也是它的缺點。雖然鼓勵開放想法可以利用群眾的力量達到更好的想法與作品，供大家使用，但憑良心講，這很困難。</p>
+<p>機構跟產品設計的圖面其實看到只是一個簡單的3D圖面，並沒有多困難，但後面可能花費數十年，以及很多的金錢與心力才完成，不清楚的人可能看不懂，知道的人一眼就能看出重點，這對大部份企業來說會很傷。所以他們會希望這重要的“資產”放在自己可以控管的”地方“，而不是”雲“或”網路上“，這需要時間去改變。</p>
+<p>但Onshape可以使有這專長的人分享他解決問題的專長，而保留他的重點知識，這有點八股，但有時”重點知識“不是我們的，而我們只是正好知道的人。</p>
+<p>現在各國在進行知識、教育或基礎建設的未來發展上，目前大多在於軟體方面，但有一件事實是，軟體發展雖有無限的可能性，但會受限於硬體與機構的發展，像Google推出SketchUp雖不能滿足大部份的需求，但你看Google地圖上的立體建築物有多少，就可發現它的成果。即使Google地圖上面的3D跟實物不是很精準，但用途其實比我們想像中的大。</p>
+<p>所以如果在程式設計外，再加上Onshape的部份圖說與製作的教育跟推廣，我們可以想像有更多人將提升解決自身或產業需求的能力，而不用像現在始終受限在工業化生產的框框裏。</p>
+<p></p><h3>CAD1 安裝配置</h3>
 <p>CAD1 指各學員所分配到的第一套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
 <p>CAD1 套件下載安裝與配置</p>
 <p>CAD1 下載安裝與配置流程 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 下載安裝與配置</span>」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.</span></p>
