--- a/content/Onshape安裝配置.html
+++ b/content/Onshape安裝配置.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpage.html'>hwpage</a><li class='has-children'><a href='Onshape 繪圖.html'>Onshape 繪圖</a><ul class='dropdown'><li><a href='Onshape安裝配置.html'>Onshape安裝配置</a><li><a href='CAD1 操作流程.html'>CAD1 操作流程</a></li></ul><li class='has-children'><a href='CAD2 繪圖.html'>CAD2 繪圖</a><ul class='dropdown'><li><a href='CAD2 安裝配置.html'>CAD2 安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpage.html'>hwpage</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Onshape 繪圖.html'>Onshape 繪圖</a><ul class='dropdown'><li><a href='Onshape安裝配置.html'>Onshape安裝配置</a></li></ul><li class='has-children'><a href='Solvespace繪圖.html'>Solvespace繪圖</a><ul class='dropdown'><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,14 +139,19 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Onshape 繪圖 << <a href='Onshape 繪圖.html'>Previous</a> <a href='CAD1 操作流程.html'>Next</a> >> CAD1 操作流程<br /><h1>Onshape安裝配置</h1>
+    <div id="tipue_search_content">Onshape 繪圖 << <a href='Onshape 繪圖.html'>Previous</a> <a href='Solvespace繪圖.html'>Next</a> >> Solvespace繪圖<br /><h1>Onshape安裝配置</h1>
 <p><span>Onshape</span>套件下載安裝與配置</p>
 <p><span>Onshape</span>下載安裝與配置流程 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 下載安裝與配置</span>」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.</span></p>
 <p></p>
 <h4>Onshape:</h4>
 <p>至Onshape網站上註冊及登入，即可使用!!!</p>
 <p><a href="https://www.onshape.com/en/">Onshape網站</a></p>
-<h4></h4><br />Onshape 繪圖 << <a href='Onshape 繪圖.html'>Previous</a> <a href='CAD1 操作流程.html'>Next</a> >> CAD1 操作流程</div>
+<h4></h4>
+<br/><span>Onshape </span>操作流程
+<p><span>Onshape零組件繪圖教學影片 embedded 影片: 標題必須為「</span><span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020<span> </span></span><span>零組件繪圖教學影片」且加上</span><span style="background-color: #ccffcc;">語音說明</span><span>與</span><span style="background-color: #ccffcc;">字幕.</span></p>
+<p><span>Onshape</span>零組件繪圖操作流程影片 (<a href="https://youtu.be/Vzn285OjsXY">Youtube</a>)</p>
+<p><span>Onshape</span>零組件繪圖教學影片 (Wink)</p>
+<p></p><br />Onshape 繪圖 << <a href='Onshape 繪圖.html'>Previous</a> <a href='Solvespace繪圖.html'>Next</a> >> Solvespace繪圖</div>
         
     <!-- footer -->
       <div class="container">
