--- a/content/Solvespace安裝配置.html
+++ b/content/Solvespace安裝配置.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad2021 homework site</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,8 +139,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">hwpage << <a href='hwpage.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1<br /><h1>運動場景</h1>
-<br />hwpage << <a href='hwpage.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
+    <div id="tipue_search_content">Solvespace繪圖 << <a href='Solvespace繪圖.html'>Previous</a> <a href='solvespace操作流程.html'>Next</a> >> solvespace操作流程<br /><h1>Solvespace安裝配置</h1>
+<p><span>在</span><b><span><span>Windows </span></span></b><span><span>，不需要安裝。</span><span>下載solvespace.exe並立即運行。</span><span>要繼續使用 SolveSpace，請將 solvespace.exe 保存在方便的地方。</span><span>為了在多核處理器上獲得更高的性能。</span></span></p>
+<p><span><span>詳情請參考<a href="https://solvespace.com/download.pl">網站</a></span></span></p>
+<br />Solvespace繪圖 << <a href='Solvespace繪圖.html'>Previous</a> <a href='solvespace操作流程.html'>Next</a> >> solvespace操作流程</div>
         
     <!-- footer -->
       <div class="container">
