--- a/content/Solvespace繪圖.html
+++ b/content/Solvespace繪圖.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpage.html'>hwpage</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Onshape 繪圖.html'>Onshape 繪圖</a><ul class='dropdown'><li><a href='Onshape安裝配置.html'>Onshape安裝配置</a></li></ul><li class='has-children'><a href='Solvespace繪圖.html'>Solvespace繪圖</a><ul class='dropdown'><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpage.html'>hwpage</a><li><a href='運動場景.html'>運動場景</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Onshape 繪圖.html'>Onshape 繪圖</a><ul class='dropdown'><li><a href='Onshape安裝配置.html'>Onshape安裝配置</a><li><a href='Onshape操作流程.html'>Onshape操作流程</a></li></ul><li class='has-children'><a href='Solvespace繪圖.html'>Solvespace繪圖</a><ul class='dropdown'><li><a href='Solvespace安裝配置.html'>Solvespace安裝配置</a><li><a href='solvespace操作流程.html'>solvespace操作流程</a></li></li></ul></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,15 +139,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Onshape安裝配置 << <a href='Onshape安裝配置.html'>Previous</a> <a href='CAD2 操作流程.html'>Next</a> >> CAD2 操作流程<br /><h1>Solvespace繪圖</h1>
-<p><span>Solvespace</span>緣起說明與介紹</p>
+    <div id="tipue_search_content">Onshape操作流程 << <a href='Onshape操作流程.html'>Previous</a> <a href='Solvespace安裝配置.html'>Next</a> >> Solvespace安裝配置<br /><h1>Solvespace繪圖</h1>
+<p><span>Solvespace</span>緣起說明與介紹:</p>
 <p><span>用戶界面由兩個窗口組成：一個主要包含圖形的較大窗口和一個主要包含文本的較小窗口。</span><span>圖形窗口用於繪製幾何圖形和查看 3d 模型。</span><span>文本窗口提供有關模型的信息，也可用於修改設置和數值參數。</span></p>
-<p><br/><span>Solvespace</span>繪圖</p>
-<p><span>Solvespace</span>緣起說明與介紹</p>
-<p><span>用戶界面由兩個窗口組成：一個主要包含圖形的較大窗口和一個主要包含文本的較小窗口。</span><span>圖形窗口用於繪製幾何圖形和查看 3d 模型。</span><span>文本窗口提供有關模型的信息，也可用於修改設置和數值參數。</span></p>
-<p>下載方式:<span>在</span><b><span><span>Windows </span></span></b><span><span>，不需要安裝。</span><span>下載solvespace.exe並立即運行。</span><span>要繼續使用 SolveSpace，請將 solvespace.exe 保存在方便的地方。</span><span>為了在多核處理器上獲得更高的性能。</span></span></p>
-<p><span><span>詳情請參考<a href="https://solvespace.com/download.pl">網站</a></span></span></p>
-<br />Onshape安裝配置 << <a href='Onshape安裝配置.html'>Previous</a> <a href='CAD2 操作流程.html'>Next</a> >> CAD2 操作流程</div>
+<br />Onshape操作流程 << <a href='Onshape操作流程.html'>Previous</a> <a href='Solvespace安裝配置.html'>Next</a> >> Solvespace安裝配置</div>
         
     <!-- footer -->
       <div class="container">
