--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -301,33 +301,25 @@ end</pre>
 <p>所以如果在程式設計外，再加上Onshape的部份圖說與製作的教育跟推廣，我們可以想像有更多人將提升解決自身或產業需求的能力，而不用像現在始終受限在工業化生產的框框裏。</p>
 <p><img alt="" height="214" src="/images/onshape-analytics-and-reporting.jpg" width="344"/><img alt="" height="218" src="/images/onshape-cad.jpg" width="350"/><img alt="" height="215" src="/images/onshape-collaboration-tools.jpg" width="346"/><img alt="" height="219" src="/images/onshape-data-management.png" width="351"/><img alt="" height="244" src="/images/onshape-integrations-and-partners.jpg" width="396"/><img alt="" height="242" src="/images/onshape-security-and-audit-controls.jpg" width="390"/></p>
 <h3>Onshape安裝配置</h3>
-<p><span>Onshape</span>套件下載安裝與配置</p>
-<p><span>Onshape</span>下載安裝與配置流程 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 下載安裝與配置</span>」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.</span></p>
-<p></p>
-<h4>Onshape:</h4>
+<p><span></span></p>
 <p>至Onshape網站上註冊及登入，即可使用!!!</p>
 <p><a href="https://www.onshape.com/en/">Onshape網站</a></p>
-<h4></h4>
-<h3>CAD1 操作流程</h3>
-<p>CAD1 指各學員所分配到的第一套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
-<p>CAD1 零組件繪圖操作流程影片 (Youtube)</p>
-<p>CAD1 零組件繪圖教學影片 (Wink)</p>
-<p>CAD1 零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
-<p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
+<h3>Onshape操作流程</h3>
+<h4><br/><span></span><span>Onshape零組件繪圖教學影片 embedded 影片: 標題必須為「</span><span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020<span> </span></span><span>零組件繪圖教學影片」且加上</span><span style="background-color: #ccffcc;">語音說明</span><span>與</span><span style="background-color: #ccffcc;">字幕.</span></h4>
+<p><span>Onshape</span>零組件繪圖操作流程影片 (<a href="https://youtu.be/Vzn285OjsXY">Youtube</a>)</p>
+<p><span>Onshape</span>零組件繪圖教學影片 (Wink)</p>
+<p></p>
 <h2>Solvespace繪圖</h2>
-<p><span>Solvespace</span>緣起說明與介紹</p>
+<p><span>Solvespace</span>緣起說明與介紹:</p>
 <p><span>用戶界面由兩個窗口組成：一個主要包含圖形的較大窗口和一個主要包含文本的較小窗口。</span><span>圖形窗口用於繪製幾何圖形和查看 3d 模型。</span><span>文本窗口提供有關模型的信息，也可用於修改設置和數值參數。</span></p>
-<p><br/><span>Solvespace</span>繪圖</p>
-<p><span>Solvespace</span>緣起說明與介紹</p>
-<p><span>用戶界面由兩個窗口組成：一個主要包含圖形的較大窗口和一個主要包含文本的較小窗口。</span><span>圖形窗口用於繪製幾何圖形和查看 3d 模型。</span><span>文本窗口提供有關模型的信息，也可用於修改設置和數值參數。</span></p>
-<p>下載方式:<span>在</span><b><span><span>Windows </span></span></b><span><span>，不需要安裝。</span><span>下載solvespace.exe並立即運行。</span><span>要繼續使用 SolveSpace，請將 solvespace.exe 保存在方便的地方。</span><span>為了在多核處理器上獲得更高的性能。</span></span></p>
+<h3><span>Solvespace安裝配置</span></h3>
+<p><span>在</span><b><span><span>Windows </span></span></b><span><span>，不需要安裝。</span><span>下載solvespace.exe並立即運行。</span><span>要繼續使用 SolveSpace，請將 solvespace.exe 保存在方便的地方。</span><span>為了在多核處理器上獲得更高的性能。</span></span></p>
 <p><span><span>詳情請參考<a href="https://solvespace.com/download.pl">網站</a></span></span></p>
-<h3>CAD2 操作流程</h3>
-<p>CAD2 指各學員所分配到的第二套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
-<p>CAD2 零組件繪圖操作流程影片 (Youtube)</p>
-<p>CAD2 零組件繪圖教學影片 (Wink)</p>
-<p>CAD2 零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
-<p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
+<h3>solvespace操作流程</h3>
+<p><span>Solvespace</span>零組件繪圖操作流程影片 (Youtube)</p>
+<p><span>Solvespace</span>零組件繪圖教學影片 (Wink)</p>
+<p><span>Solvespace</span>零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
+<p></p>
 <h2>運動場景</h2>
 <h4>CAD1:</h4>
 <p style="padding-left: 30px;">CAD1 零件轉出後轉入 CoppeliaSim 操作影片 (Youtube)</p>
