--- a/config/content.htm
+++ b/config/content.htm
@@ -306,7 +306,7 @@ end</pre>
 <p>至Onshape網站上註冊及登入，即可使用!!!</p>
 <p><a href="https://www.onshape.com/en/">Onshape網站</a></p>
 <h3>Onshape操作流程</h3>
-<h4><br/><span></span><span>Onshape零組件繪圖教學影片 embedded 影片: 標題必須為「</span><span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020<span> </span></span><span>零組件繪圖教學影片」且加上</span><span style="background-color: #ccffcc;">語音說明</span><span>與</span><span style="background-color: #ccffcc;">字幕.</span></h4>
+<p><br/><span>Onshape零組件繪圖教學影片 embedded 影片: 標題必須為「</span><span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020<span> </span></span><span>零組件繪圖教學影片」且加上</span><span style="background-color: #ccffcc;">語音說明</span><span>與</span><span style="background-color: #ccffcc;">字幕.</span></p>
 <p><span>Onshape</span>零組件繪圖操作流程影片 (<a href="https://youtu.be/Vzn285OjsXY">Youtube</a>)</p>
 <p><span>Onshape</span>零組件繪圖教學影片 (Wink)</p>
 <p></p>
@@ -321,15 +321,7 @@ end</pre>
 <p><span>Solvespace</span>零組件繪圖教學影片 (Wink)</p>
 <p><span>Solvespace</span>零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
 <p></p>
-<h4>CAD1:</h4>
-<p style="padding-left: 30px;">CAD1 零件轉出後轉入 CoppeliaSim 操作影片 (Youtube)</p>
-<p style="padding-left: 30px;">CAD1 零件轉入 CoppeliaSim 教學影片 (Wink)</p>
-<p style="padding-left: 30px;">CAD1 轉入 Coppeliasim 教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零件轉入 CoppeliaSim 教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
-<h4>CAD2:</h4>
-<p style="padding-left: 30px;">CAD2 零件轉出後轉入 CoppeliaSim 操作影片 (Youtube)</p>
-<p style="padding-left: 30px;">CAD2 零件轉入 CoppeliaSim 教學影片 (Wink)</p>
-<p style="padding-left: 30px;">CAD2 轉入 Coppeliasim 教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零件轉入 CoppeliaSim 教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.</span></p>
-<p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
+<h4></h4>
 <h1>HW1-1</h1>
 <p>HW1-1 佔學期成績 15%</p>
 <p><span style="background-color: #ffff99;">HW1-1 必須在 2021.12.01 22:00 之前完成.<br/></span></p>
