--- a/content/Onshape 繪圖.html
+++ b/content/Onshape 繪圖.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpage.html'>hwpage</a><li><a href='運動場景.html'>運動場景</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Onshape 繪圖.html'>Onshape 繪圖</a><ul class='dropdown'><li><a href='Onshape安裝配置.html'>Onshape安裝配置</a><li><a href='Onshape操作流程.html'>Onshape操作流程</a></li></ul><li class='has-children'><a href='Solvespace繪圖.html'>Solvespace繪圖</a><ul class='dropdown'><li><a href='Solvespace安裝配置.html'>Solvespace安裝配置</a><li><a href='solvespace操作流程.html'>solvespace操作流程</a></li></li></ul></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpage.html'>hwpage</a><li><a href='運動場景.html'>運動場景</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Onshape 繪圖.html'>Onshape 繪圖</a><ul class='dropdown'><li><a href='Onshape安裝配置.html'>Onshape安裝配置</a><li><a href='Onshape操作流程.html'>Onshape操作流程</a></li></ul><li class='has-children'><a href='Solvespace繪圖.html'>Solvespace繪圖</a><ul class='dropdown'><li><a href='Solvespace安裝配置.html'>Solvespace安裝配置</a><li><a href='solvespace操作流程.html'>solvespace操作流程</a></li></li></ul></ul><li><a href='HW1-1.html'>HW1-1</a><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='H2.html'>H2</a></li></ul><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a></li>
                       </ul>
                 </nav>
               </div>
@@ -148,7 +148,8 @@ img.add_border {
 <p>但Onshape可以使有這專長的人分享他解決問題的專長，而保留他的重點知識，這有點八股，但有時”重點知識“不是我們的，而我們只是正好知道的人。</p>
 <p>現在各國在進行知識、教育或基礎建設的未來發展上，目前大多在於軟體方面，但有一件事實是，軟體發展雖有無限的可能性，但會受限於硬體與機構的發展，像Google推出SketchUp雖不能滿足大部份的需求，但你看Google地圖上的立體建築物有多少，就可發現它的成果。即使Google地圖上面的3D跟實物不是很精準，但用途其實比我們想像中的大。</p>
 <p>所以如果在程式設計外，再加上Onshape的部份圖說與製作的教育跟推廣，我們可以想像有更多人將提升解決自身或產業需求的能力，而不用像現在始終受限在工業化生產的框框裏。</p>
-<p><img alt="" height="214" src="./../images/onshape-analytics-and-reporting.jpg" width="344"/><img alt="" height="218" src="./../images/onshape-cad.jpg" width="350"/><img alt="" height="215" src="./../images/onshape-collaboration-tools.jpg" width="346"/><img alt="" height="219" src="./../images/onshape-data-management.png" width="351"/><img alt="" height="244" src="./../images/onshape-integrations-and-partners.jpg" width="396"/><img alt="" height="242" src="./../images/onshape-security-and-audit-controls.jpg" width="390"/></p><br />HW1 << <a href='HW1.html'>Previous</a> <a href='Onshape安裝配置.html'>Next</a> >> Onshape安裝配置</div>
+<p><img alt="" height="214" src="./../images/onshape-analytics-and-reporting.jpg" width="344"/><img alt="" height="218" src="./../images/onshape-cad.jpg" width="350"/><img alt="" height="215" src="./../images/onshape-collaboration-tools.jpg" width="346"/><img alt="" height="219" src="./../images/onshape-data-management.png" width="351"/><img alt="" height="244" src="./../images/onshape-integrations-and-partners.jpg" width="396"/><img alt="" height="242" src="./../images/onshape-security-and-audit-controls.jpg" width="390"/></p>
+<br />HW1 << <a href='HW1.html'>Previous</a> <a href='Onshape安裝配置.html'>Next</a> >> Onshape安裝配置</div>
         
     <!-- footer -->
       <div class="container">
