--- a/content/solvespace操作流程.html
+++ b/content/solvespace操作流程.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpage.html'>hwpage</a><li><a href='運動場景.html'>運動場景</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Onshape 繪圖.html'>Onshape 繪圖</a><ul class='dropdown'><li><a href='Onshape安裝配置.html'>Onshape安裝配置</a><li><a href='Onshape操作流程.html'>Onshape操作流程</a></li></ul><li class='has-children'><a href='Solvespace繪圖.html'>Solvespace繪圖</a><ul class='dropdown'><li><a href='Solvespace安裝配置.html'>Solvespace安裝配置</a><li><a href='solvespace操作流程.html'>solvespace操作流程</a></li></li></ul></ul><li><a href='HW1-1.html'>HW1-1</a><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='H2.html'>H2</a></li></ul><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpage.html'>hwpage</a><li><a href='運動場景.html'>運動場景</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Onshape 繪圖.html'>Onshape 繪圖</a><ul class='dropdown'><li><a href='Onshape安裝配置.html'>Onshape安裝配置</a><li><a href='Onshape操作流程.html'>Onshape操作流程</a></li></ul><li class='has-children'><a href='Solvespace繪圖.html'>Solvespace繪圖</a><ul class='dropdown'><li><a href='Solvespace安裝配置.html'>Solvespace安裝配置</a><li><a href='solvespace操作流程.html'>solvespace操作流程</a></li></ul><li><a href='w13.html'>w13</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='H2.html'>H2</a></li></ul><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,13 +139,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Solvespace安裝配置 << <a href='Solvespace安裝配置.html'>Previous</a> <a href='HW1-1.html'>Next</a> >> HW1-1<br /><h1>solvespace操作流程</h1>
+    <div id="tipue_search_content">Solvespace安裝配置 << <a href='Solvespace安裝配置.html'>Previous</a> <a href='w13.html'>Next</a> >> w13<br /><h1>solvespace操作流程</h1>
 <p><span>Solvespace</span>零組件繪圖操作流程影片 (Youtube)</p>
 <p><span>Solvespace</span>零組件繪圖教學影片 (Wink)</p>
 <p><span>Solvespace</span>零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
-<p></p>
-<h4></h4>
-<br />Solvespace安裝配置 << <a href='Solvespace安裝配置.html'>Previous</a> <a href='HW1-1.html'>Next</a> >> HW1-1</div>
+<br />Solvespace安裝配置 << <a href='Solvespace安裝配置.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
         
     <!-- footer -->
       <div class="container">
