--- a/config/content.htm
+++ b/config/content.htm
@@ -395,8 +395,10 @@ frameStops: {
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/2qc0-yTXBts" title="YouTube video player" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/PDSmRPh6TaM" title="YouTube video player" width="560"></iframe></p>
 <h2>期末1</h2>
-<p>零件繪製+組裝</p>
+<p>Onshape零件繪製+組裝</p>
 <p><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/VE03YEsTj9w" width="560"></iframe></p>
-<p>心得:這次的功課學到了如何運用CoppeliaSim及裡面的Dummy，在不太熟悉的情況下問了班上實力較強的同學，幫助了我許多，希望之後的我能夠越來越順利並且熟能生巧。</p>
+<p><span>CoppeliaSim作動</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/-wkhHOzM80s" width="560"></iframe></span></p>
+<p>心得:這次的功課學到了如何運用CoppeliaSim及裡面的Dummy，在不太熟悉的情況下問了班上實力較強的同學以及組長，幫助了我許多，希望之後的我能夠越來越順利並且熟能生巧。也因為這次的功課使我更加熟悉Onshape</p>
 <p></p>
 <p></p>
