--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -394,3 +394,9 @@ frameStops: {
 <h4>範例:</h4>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/2qc0-yTXBts" title="YouTube video player" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/PDSmRPh6TaM" title="YouTube video player" width="560"></iframe></p>
+<h2>期末1</h2>
+<p>零件繪製+組裝</p>
+<p><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/VE03YEsTj9w" width="560"></iframe></p>
+<p>心得:這次的功課學到了如何運用CoppeliaSim及裡面的Dummy，在不太熟悉的情況下問了班上實力較強的同學，幫助了我許多，希望之後的我能夠越來越順利並且熟能生巧。</p>
+<p></p>
+<p></p>
