--- a/config/content.htm
+++ b/config/content.htm
@@ -356,6 +356,7 @@ frameStops: {
 <h1>W11</h1>
 <h2>H2</h2>
 <p>四連桿零件尺寸圖:<a href="https://drive.google.com/file/d/1U9BLFsPTiLHcdEjrS513FXmUpSrqOyGJ/view?usp=sharing">連結</a></p>
+<p><img alt="" height="472" src="/images/四連桿圖.png" width="429"/></p>
 <p>四連桿零件+組合(ONS):<a href="https://drive.google.com/drive/folders/1HZ9oM4-pZYsd_FvlK7rnvQlw5WNL93wq?usp=sharing">連結</a></p>
 <p>四連桿作動(Coppeliasim):</p>
 <p><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/o0Iq8yipCas" width="560"></iframe></p>
