--- a/content/H2.html
+++ b/content/H2.html
@@ -141,6 +141,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">W11 << <a href='W11.html'>Previous</a> <a href='HW2.html'>Next</a> >> HW2<br /><h1>H2</h1>
 <p>四連桿零件尺寸圖:<a href="https://drive.google.com/file/d/1U9BLFsPTiLHcdEjrS513FXmUpSrqOyGJ/view?usp=sharing">連結</a></p>
+<p><img alt="" height="472" src="./../images/四連桿圖.png" width="429"/></p>
 <p>四連桿零件+組合(ONS):<a href="https://drive.google.com/drive/folders/1HZ9oM4-pZYsd_FvlK7rnvQlw5WNL93wq?usp=sharing">連結</a></p>
 <p>四連桿作動(Coppeliasim):</p>
 <p><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/o0Iq8yipCas" width="560"></iframe></p>
