--- a/content/H2.html
+++ b/content/H2.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpage.html'>hwpage</a><li><a href='運動場景.html'>運動場景</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Onshape 繪圖.html'>Onshape 繪圖</a><ul class='dropdown'><li><a href='Onshape安裝配置.html'>Onshape安裝配置</a><li><a href='Onshape操作流程.html'>Onshape操作流程</a></li></ul><li class='has-children'><a href='Solvespace繪圖.html'>Solvespace繪圖</a><ul class='dropdown'><li><a href='Solvespace安裝配置.html'>Solvespace安裝配置</a><li><a href='solvespace操作流程.html'>solvespace操作流程</a></li></ul><li><a href='w13.html'>w13</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='H2.html'>H2</a></li></ul><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li class='has-children'><a href='Final Project.html'>Final Project</a><ul class='dropdown'><li><a href='期末1.html'>期末1</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpage.html'>hwpage</a><li><a href='運動場景.html'>運動場景</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Onshape 繪圖.html'>Onshape 繪圖</a><ul class='dropdown'><li><a href='Onshape安裝配置.html'>Onshape安裝配置</a><li><a href='Onshape操作流程.html'>Onshape操作流程</a></li></ul><li class='has-children'><a href='Solvespace繪圖.html'>Solvespace繪圖</a><ul class='dropdown'><li><a href='Solvespace安裝配置.html'>Solvespace安裝配置</a><li><a href='solvespace操作流程.html'>solvespace操作流程</a></li></ul><li><a href='w13.html'>w13</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='H2.html'>H2</a></li></ul><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li class='has-children'><a href='Final Project.html'>Final Project</a><ul class='dropdown'><li><a href='期末1.html'>期末1</a><li><a href='期末2.html'>期末2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -146,7 +146,8 @@ img.add_border {
 <p>四連桿作動(Coppeliasim):</p>
 <p><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/o0Iq8yipCas" width="560"></iframe></p>
 <p></p>
-<p></p><br />W11 << <a href='W11.html'>Previous</a> <a href='HW2.html'>Next</a> >> HW2</div>
+<p></p>
+<br />W11 << <a href='W11.html'>Previous</a> <a href='HW2.html'>Next</a> >> HW2</div>
         
     <!-- footer -->
       <div class="container">
