--- a/content/期末1.html
+++ b/content/期末1.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpage.html'>hwpage</a><li><a href='運動場景.html'>運動場景</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Onshape 繪圖.html'>Onshape 繪圖</a><ul class='dropdown'><li><a href='Onshape安裝配置.html'>Onshape安裝配置</a><li><a href='Onshape操作流程.html'>Onshape操作流程</a></li></ul><li class='has-children'><a href='Solvespace繪圖.html'>Solvespace繪圖</a><ul class='dropdown'><li><a href='Solvespace安裝配置.html'>Solvespace安裝配置</a><li><a href='solvespace操作流程.html'>solvespace操作流程</a></li></ul><li><a href='w13.html'>w13</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='H2.html'>H2</a></li></ul><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li class='has-children'><a href='Final Project.html'>Final Project</a><ul class='dropdown'><li><a href='期末1.html'>期末1</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpage.html'>hwpage</a><li><a href='運動場景.html'>運動場景</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Onshape 繪圖.html'>Onshape 繪圖</a><ul class='dropdown'><li><a href='Onshape安裝配置.html'>Onshape安裝配置</a><li><a href='Onshape操作流程.html'>Onshape操作流程</a></li></ul><li class='has-children'><a href='Solvespace繪圖.html'>Solvespace繪圖</a><ul class='dropdown'><li><a href='Solvespace安裝配置.html'>Solvespace安裝配置</a><li><a href='solvespace操作流程.html'>solvespace操作流程</a></li></ul><li><a href='w13.html'>w13</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='H2.html'>H2</a></li></ul><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li class='has-children'><a href='Final Project.html'>Final Project</a><ul class='dropdown'><li><a href='期末1.html'>期末1</a><li><a href='期末2.html'>期末2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,14 +139,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Final Project << <a href='Final Project.html'>Previous</a> <br /><h1>期末1</h1>
+    <div id="tipue_search_content">Final Project << <a href='Final Project.html'>Previous</a> <a href='期末2.html'>Next</a> >> 期末2<br /><h1>期末1</h1>
 <p>Onshape零件繪製+組裝</p>
 <p><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/VE03YEsTj9w" width="560"></iframe></p>
 <p><span>CoppeliaSim作動</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/-wkhHOzM80s" width="560"></iframe></span></p>
 <p>心得:這次的功課學到了如何運用CoppeliaSim及裡面的Dummy，在不太熟悉的情況下問了班上實力較強的同學以及組長，幫助了我許多，希望之後的我能夠越來越順利並且熟能生巧。也因為這次的功課使我更加熟悉Onshape</p>
 <p></p>
-<p></p><br />Final Project << <a href='Final Project.html'>Previous</a> </div>
+<br />Final Project << <a href='Final Project.html'>Previous</a> <a href='期末2.html'>Next</a> >> 期末2</div>
         
     <!-- footer -->
       <div class="container">
