--- a/content/期末2.html
+++ b/content/期末2.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad2021 homework site</title>
         <meta charset="utf-8">
-<meta property="head" content="H3">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,12 +139,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Onshape安裝配置 << <a href='Onshape安裝配置.html'>Previous</a> <a href='Solvespace繪圖.html'>Next</a> >> Solvespace繪圖<br /><h1>Onshape操作流程</h1>
-<p><br/><span>Onshape零組件繪圖教學影片 embedded 影片: 標題必須為「</span><span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020<span> </span></span><span>零組件繪圖教學影片」且加上</span><span style="background-color: #ccffcc;">語音說明</span><span>與</span><span style="background-color: #ccffcc;">字幕.</span></p>
-<p><span>Onshape</span>零組件繪圖操作流程影片 (<a href="https://youtu.be/Vzn285OjsXY">Youtube</a>)</p>
-<p><span>Onshape</span>零組件繪圖教學影片 (Wink)</p>
-<p></p>
-<br />Onshape安裝配置 << <a href='Onshape安裝配置.html'>Previous</a> <a href='Solvespace繪圖.html'>Next</a> >> Solvespace繪圖</div>
+    <div id="tipue_search_content">期末1 << <a href='期末1.html'>Previous</a> <br /><h1>期末2</h1>
+<p><span>Onshape零件繪製(零件圖+繪製過程)</span></p>
+<p><span><img alt="" height="612" src="./../images/連桿圖.png" width="494"/></span></p><br />期末1 << <a href='期末1.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
