--- a/content/期末2.html
+++ b/content/期末2.html
@@ -141,7 +141,9 @@ img.add_border {
         </header>
     <div id="tipue_search_content">期末1 << <a href='期末1.html'>Previous</a> <br /><h1>期末2</h1>
 <p><span>Onshape零件繪製(零件圖+繪製過程)</span></p>
-<p><span><img alt="" height="612" src="./../images/連桿圖.png" width="494"/></span></p><br />期末1 << <a href='期末1.html'>Previous</a> </div>
+<p><span><img alt="" height="612" src="./../images/連桿圖.png" width="494"/></span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/p2UZBHN5Ie8" width="560"></iframe></span></p>
+<p><span></span></p><br />期末1 << <a href='期末1.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
